// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup> that renders a button should add classes when props are changed 1`] = `
<ButtonGroup
  context="neutral"
  isBlock={true}
  size="large"
>
  <div
    className="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <Button
      className="ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--context_neutral"
      context="neutral"
      key=".0"
      size="large"
    >
      <button
        className="Button Button--context_neutral Button--size_large ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--context_neutral"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--context_neutral"
      context="neutral"
      key=".1"
      size="large"
    >
      <button
        className="Button Button--context_neutral Button--size_large ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--context_neutral"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup> that renders a button should render default button correctly 1`] = `
<ButtonGroup
  context="neutral"
  isBlock={false}
  size="normal"
>
  <div
    className="ButtonGroup"
    role="group"
  >
    <Button
      className="ButtonGroup__button ButtonGroup__button--context_neutral"
      context="neutral"
      key=".0"
      size="normal"
    >
      <button
        className="Button Button--context_neutral ButtonGroup__button ButtonGroup__button--context_neutral"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button ButtonGroup__button--context_neutral"
      context="neutral"
      key=".1"
      size="normal"
    >
      <button
        className="Button Button--context_neutral ButtonGroup__button ButtonGroup__button--context_neutral"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;
